--- a/index.html
+++ b/index.html
@@ -396,6 +396,49 @@
         <button type="button" class="close-button" data-modal-close>
           <svg class="close-black" width="18" height="18"><use xlink:href="./images/icons.svg#icon-close-black"></use></svg>
         </button>
+        <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
+        <form action="" class="modal-form">
+        <div class="name-wrap">
+          <label for="name">Ім'я</label>
+          <div class="icon-wrap">
+            <input type="text" name="user-name" id="name">
+            <svg viewBox="0 0 32 32" width="18px">
+              <use xlink:href="./images/icons.svg#icon-person-modal"></use>
+            </svg>
+          </div>
+        </div>
+        <div class="name-wrap">
+          <label for="tel">Телефон</label>
+          <div class="icon-wrap">
+            <input type="tel" name="phone" id="tel">
+            <svg viewBox="0 0 32 32" width="18px">
+              <use xlink:href="./images/icons.svg#icon-phone-modal"></use>
+            </svg>
+          </div>
+        </div>
+        <div class="name-wrap">
+          <label for="email">Пошта</label>
+          <div class="icon-wrap">
+            <input type="email" name="email" id="email">
+            <svg viewBox="0 0 32 32" width="18px">
+              <use xlink:href="./images/icons.svg#icon-email-modal"></use>
+            </svg>
+          </div>
+        </div>
+        <div class="name-wrap">
+          <label for="coment">Коментар</label>
+          <textarea name="coment" rows="5" placeholder="Введіть текст"></textarea>
+        </div>
+        <div class="accept-wrap">
+          
+          <input type="checkbox" id="accept" name="accept" class="visually-hidden" required>
+          <div class="checkbox"><svg viewBox="0 0 42 32" width="11px">
+            <use xlink:href="./images/icons.svg#icon-vector-modal"></use>
+          </svg></div>
+          <label for="accept">Погоджуюся з розсилкою та приймаю <span class="accept-contract"><a href="" class="contract">Умови договору</a></span></label>
+        </div>
+          <button type="submit" class="btn-submit">Відправити</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
