added footer sign up

--- a/index.html
+++ b/index.html
@@ -338,9 +338,7 @@
     <footer class="footer">
       <div class="footer-container container">
         <div class="footer-contact">
-          <a href="./index.html" class="footer-content"
-            ><span class="web-content">Web</span>Studio</a
-          >
+          <a href="./index.html" class="footer-content"><span class="web-content">Web</span>Studio</a>
           <address id="address" class="address">
             <ul class="footer-contact">
               <li class="footer-item list">
@@ -362,32 +360,44 @@
           </address>
         </div>
         <div class="footer-icons">
-          <b class="footer-text">приєднуйтесь</b>
+          <p class="footer-text">приєднуйтесь</p>
           <ul class="footer-list list">
             <li class="footer-social">
-              <a class="footer-social-icons" href=""
-                ><svg viewBox="0 0 32 32" class="social-icons">
-                  <use xlink:href="./images/icons.svg#icon-instagram"></use></svg></a>
-            </li>
-            <li class="footer-social">
-              <a class="footer-social-icons" href=""
-                ><svg viewBox="0 0 32 32" class="social-icons">
-                  <use xlink:href="./images/icons.svg#icon-twitter"></use></svg></a>
-            </li>
-            <li class="footer-social">
-              <a class="footer-social-icons" href=""
-                ><svg viewBox="0 0 32 32" class="social-icons">
-                  <use xlink:href="./images/icons.svg#icon-facebook"></use></svg></a>
+              <a class="footer-social-icons" href="">
+                <svg viewBox="0 0 32 32" class="social-icons">
+                  <use xlink:href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
             <li class="footer-social">
               <a class="footer-social-icons" href="">
                 <svg viewBox="0 0 32 32" class="social-icons">
-                <use xlink:href="./images/icons.svg#icon-linkedin">
-                </use>
-              </svg>
-            </a>
+                  <use xlink:href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social">
+              <a class="footer-social-icons" href="">
+                <svg viewBox="0 0 32 32" class="social-icons">
+                  <use xlink:href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social">
+              <a class="footer-social-icons" href="">
+                <svg viewBox="0 0 32 32" class="social-icons">
+                  <use xlink:href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
+        </div>
+        <div class="footer-sign-up">
+          <p class="footer-text">Підпишіться на розсилку</p>
+          <label for="sign-up">
+            <input type="email" name="email" id="sign-up" placeholder="E-mail">
+          </label>
+          <button type="button" class="btn-sign-up">Підписатися<svg class="btn-sign" width="24" height="24"><use xlink:href="./images/icons.svg#icon-send"></use></svg></button>
         </div>
       </div>
     </footer>
@@ -430,7 +440,6 @@
           <textarea name="coment" rows="5" placeholder="Введіть текст"></textarea>
         </div>
         <div class="accept-wrap">
-          
           <input type="checkbox" id="accept" name="accept" class="visually-hidden" required>
           <div class="checkbox"><svg viewBox="0 0 42 32" width="11px">
             <use xlink:href="./images/icons.svg#icon-vector-modal"></use>
