--- a/portfolio.html
+++ b/portfolio.html
@@ -209,11 +209,13 @@
           <address id="address" class="address">
             <ul class="footer-contact">
               <li class="footer-item list">
-                <a href="https://goo.gl/maps/LxJnKi2YJGoGmcJx7"
+                <a
+                  href="https://goo.gl/maps/LxJnKi2YJGoGmcJx7"
                   target="”_blank”"
                   rel="nofollow noopener noreferrer"
                   class="address link"
-                  >м. Київ, пр-т Лесі Українки, 26</a>
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
               </li>
               <li class="footer-items list">
                 <a href="mailto:info@devstudio.com" class="contact link">info@devstudio.com</a>
@@ -225,41 +227,44 @@
           </address>
         </div>
         <div class="footer-icons">
-          <b class="footer-text">приєднуйтесь</b>
+          <p class="footer-text">приєднуйтесь</p>
           <ul class="footer-list list">
             <li class="footer-social">
               <a class="footer-social-icons" href="">
                 <svg viewBox="0 0 32 32" class="social-icons">
-                  <use xlink:href="./images/icons.svg#icon-instagram">
-                  </use>
+                  <use xlink:href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social">
               <a class="footer-social-icons" href="">
                 <svg viewBox="0 0 32 32" class="social-icons">
-                  <use xlink:href="./images/icons.svg#icon-twitter">
-                  </use>
+                  <use xlink:href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social">
               <a class="footer-social-icons" href="">
                 <svg viewBox="0 0 32 32" class="social-icons">
-                  <use xlink:href="./images/icons.svg#icon-facebook">
-                  </use>
+                  <use xlink:href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social">
               <a class="footer-social-icons" href="">
                 <svg viewBox="0 0 32 32" class="social-icons">
-                  <use xlink:href="./images/icons.svg#icon-linkedin">
-                  </use>
+                  <use xlink:href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
+        </div>
+        <div class="footer-sign-up">
+          <p class="footer-text">Підпишіться на розсилку</p>
+          <label for="sign-up">
+            <input type="email" name="email" id="sign-up" placeholder="E-mail">
+          </label>
+          <button type="button" class="btn-sign-up">Підписатися<svg class="btn-sign" width="24" height="24"><use xlink:href="./images/icons.svg#icon-send"></use></svg></button>
         </div>
       </div>
     </footer>
